# meet

./: .cta.json  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  biome.json  components.json  compose.yml  docker-compose.yml  package.json  pyrightconfig.json  update.sh
client/: bun.lockb  package.json  tsconfig.app.json  vite.config.ts
client/src/: main.tsx  routeTree.gen.ts  socket.ts
client/src/components/: Event.tsx  Piano.tsx
client/src/routes/: index.tsx
client/src/routes/r/: $roomId.tsx
scripts/: update.sh
server/: .gitignore  Dockerfile  main.py  pyproject.toml  sio_app.py
server/app/: main.py
src/: env.ts  router.tsx  styles.css
src/components/: Controls.tsx  Panel.tsx  controls-state.ts  room-state.ts
src/components/chat/: Chat.tsx
src/components/login-dialog/: LoginDialog.tsx
src/components/participant-video-tile/: ParticipantVideoTile.tsx
src/components/rooms/vocal/: ActiveSpeakerPanel.tsx  Controls.tsx  DeviceSetup.tsx  LocalParticipantTile.tsx  ParticipantTile.tsx  Participants.tsx  ParticipantsGrid.tsx  Piano.tsx  PreConnectDialog.tsx  Room.tsx  Synth.ts  controls-state.ts  device-setup-state.ts  keys.ts  (+2 more)
src/components/ui/: button.tsx  dialog.tsx  drawer.tsx  empty.tsx  number-field.tsx  otp-field.tsx  sheet.tsx  sidebar.tsx  toast.tsx
src/components/user-badge/: UserBadge.tsx
src/hooks/: use-media-query.ts
src/integrations/better-auth/: header-user.tsx
src/lib/: user-store.ts
src/lib/auth/: index.ts
src/lib/livekit/: index.ts
src/routes/: __root.tsx  index.tsx
src/routes/room/: $roomId.tsx
(+27 files in other folders)
